adicionado cor ao botão

--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -4,7 +4,7 @@ $corFundoSecundaria:  #c4c4c4;
 $corTextoPrincipal: #f0f0f0;
 $corTextoSecundaria: #fff;
 $corTextoTerciaria: #f0f0f0;
-$corFundoBotao: #7AA6CB;
+$corFundoBotao: #4481B7;
 $corFundoBotaoSecundaria: #f3f3f3;
 $corFundoBotaoTerciaria: #4181B6;
 $corFundoBotaoQuaternaria: #336087;
