--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,8 @@
 
 body {
     background-image: url(../../images/background.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
